Logo responsiveness fixed on Safari/iOS

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ a:hover::after {
     max-height: 200px;
 }
 .top-strip img {
-    width: 15%;
+    width: 250px;
     height: auto;
     margin-left: 20px;
 }
@@ -137,20 +137,20 @@ a:hover::after {
 
 @media only screen and (max-width: 1200px) {
     .top-strip img {
-        width: 20%;
+        width: 220px;
         height: auto;
     }
 }
 @media only screen and (max-width: 800px) {
     .top-strip img {
-        width: 25%;
+        width: 200px;
         height: auto;
     }
 }
 @media only screen and (max-width: 640px) {
     /* Top Strip */
         .top-strip img {
-        width: 30%;
+        width: 180px;
         height: auto;
     }
     .nav {
@@ -260,13 +260,12 @@ a:hover::after {
     /*  translate(-9px, -12px) */
     }
 }
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 460px) {
     .top-strip {
         justify-content: center;
         padding: 0;
     }
     .top-strip img {
-        min-width: 40%;
         height: auto;
         margin: 0;
     }
